Update professional experience in hakkimda.html
Added new professional experience entry for AirSense.

--- a/hakkimda.html
+++ b/hakkimda.html
@@ -70,6 +70,11 @@
             <section class="glass-card timeline-box">
                 <div class="card-title"><i class="fas fa-briefcase"></i> Profesyonel Deneyim</div>
                 <div class="timeline">
+                        <div class="timeline-item">
+                        <span class="date">2025</span>
+                        <h4>AirSense | Proje Yöneticisi</h4>
+                        <p>AI destekli hava kalite ölçüm analiz ve acil durum uyarı sistemi yapıyoruz. Proje yöneticiliği mobil ve backend geliştirme görevlerini üstleniyorum.</p>
+                    </div>
                     <div class="timeline-item">
                         <span class="date">2025</span>
                         <h4>MixCodder | Proje Yöneticisi</h4>
