Yeni SQL sertifika eklendi

--- a/sertifikalar.html
+++ b/sertifikalar.html
@@ -108,6 +108,17 @@
                     <a href="assets/xpoda1.pdf" target="_blank" class="cert-btn">Sertifika 2</a>
                 </div>
             </div>
+
+            <div class="glass-card cert-card">
+                <div class="cert-header">
+                    <i class="fas fa-database cert-icon"></i>
+                    <div>
+                        <h4>Sorgularla Adım Adım SQL Veri Tabanı Programlama</h4>
+                        <span class="cert-source">BTK Akademi</span>
+                    </div>
+                </div>
+                <a href="assets/adimadimsql.pdf" target="_blank" class="cert-btn">Sertifikayı Görüntüle</a>
+            </div>
         </div>
     </div>
 
