Add new SQL database programming certificate

--- a/sertifikalar.html
+++ b/sertifikalar.html
@@ -37,6 +37,17 @@
                 <a href="assets/csharp-sql101.pdf" target="_blank" class="cert-btn">Sertifikayı Görüntüle</a>
             </div>
 
+                        <div class="glass-card cert-card">
+                <div class="cert-header">
+                    <i class="fas fa-database cert-icon"></i>
+                    <div>
+                        <h4>Sorgularla Adım Adım SQL Veri Tabanı Programlama</h4>
+                        <span class="cert-source">UDEMY</span>
+                    </div>
+                </div>
+                <a href="assets/adimadimsql.pdf" target="_blank" class="cert-btn">Sertifikayı Görüntüle</a>
+            </div>
+
             <div class="glass-card cert-card">
                 <div class="cert-header">
                     <i class="fas fa-desktop cert-icon"></i>
@@ -109,16 +120,6 @@
                 </div>
             </div>
 
-            <div class="glass-card cert-card">
-                <div class="cert-header">
-                    <i class="fas fa-database cert-icon"></i>
-                    <div>
-                        <h4>Sorgularla Adım Adım SQL Veri Tabanı Programlama</h4>
-                        <span class="cert-source">BTK Akademi</span>
-                    </div>
-                </div>
-                <a href="assets/adimadimsql.pdf" target="_blank" class="cert-btn">Sertifikayı Görüntüle</a>
-            </div>
         </div>
     </div>
 
