Update bio text with university name

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
                 <img src="assets/resim.png" alt="Arda Karadağ" class="profile-img">
                 <div class="profile-text">
                     <h3>Merhaba, Ben Arda!</h3>
-                    <p>Ostim Teknik Üniversitesi</p>
                 </div>
             </div>
             <div class="bio-text">
-                <p>Ankara doğumluyum, Bilgisayar Programcılığı öğrencisiyim. Yazılım geliştirme, veritabanı yönetimi ve AI teknolojileri ile yakından ilgileniyorum.</p>
+                <p>Ankara doğumluyum, Ostim Teknik Üniversitesi Bilgisayar Programcılığı öğrencisiyim. Yazılım geliştirme, veritabanı yönetimi ve AI teknolojileri ile yakından ilgileniyorum.</p>
             </div>
         </section>
 
